<resources>
    <string name="app_name">Portfolio</string>
    <string name="heading_text">My Nanodegree Apps !</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_header">XYZ Header</string>
    <string name="capstone_app">Capstone App</string>
</resources>
