<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.vn.portfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/heading_text"
        android:textSize="20sp"
        android:id="@+id/title_text"
        android:layout_centerHorizontal="true"/>


    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/spotify_streamer"
            android:id="@+id/button1"
            android:backgroundTint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:onClick="display"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/scores_app"
            android:id="@+id/button2"
            android:backgroundTint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:onClick="display"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/library_app"
            android:id="@+id/button3"
            android:backgroundTint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:onClick="display"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/build_it_bigger"
            android:id="@+id/button4"
            android:backgroundTint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:onClick="display" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/xyz_header"
            android:id="@+id/button5"
            android:backgroundTint="@color/colorPrimary"
            android:layout_centerHorizontal="true"
            android:onClick="display"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/capstone_app"
            android:id="@+id/button6"
            android:layout_centerHorizontal="true"
            android:backgroundTint="@color/colorAccent"
            android:onClick="display"/>

    </LinearLayout>


</RelativeLayout>
